<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".order.ui.OrderActivity"
    android:fitsSystemWindows="true"
    android:background="@color/biruMuda"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


            <!-- Your scrolling content -->


                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <!--<ProgressBar-->
                                <!--android:id="@+id/order_progress"-->
                                <!--style="?android:attr/progressBarStyleSmall"-->
                                <!--android:layout_width="match_parent"-->
                                <!--android:layout_height="wrap_content"-->
                                <!--android:indeterminate="true"-->
                                <!--android:visibility="visible"-->
                                <!--app:layout_constraintEnd_toEndOf="parent"-->
                                <!--app:layout_constraintStart_toStartOf="parent"-->
                                <!--app:layout_constraintTop_toTopOf="parent" />-->

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="6dp"
                                        android:layout_marginStart="8dp"
                                        android:layout_marginBottom="6dp"
                                        android:text="Type"
                                        android:textColor="@color/biruLaut"/>
                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_centerHorizontal="true"
                                        android:orientation="horizontal">

                                        <Button
                                            android:id="@+id/button_normal"
                                            android:layout_width="100dp"
                                            android:layout_height="wrap_content"
                                            android:layout_marginStart="8dp"
                                            android:layout_marginEnd="8dp"
                                            android:background="@drawable/btn_order_background"
                                            android:text="@string/normal_btn"
                                            android:textColor="@color/putih" />

                                        <Button
                                            android:id="@+id/button_express"
                                            android:layout_width="100dp"
                                            android:layout_height="wrap_content"
                                            android:layout_marginStart="8dp"
                                            android:layout_marginEnd="8dp"
                                            android:background="@drawable/btn_order_border"
                                            android:text="@string/express_btn"
                                            android:textColor="@color/biruLaut" />

                                        <Button
                                            android:id="@+id/button_kilat"
                                            android:layout_width="100dp"
                                            android:layout_height="wrap_content"
                                            android:layout_marginStart="8dp"
                                            android:layout_marginEnd="8dp"
                                            android:background="@drawable/btn_order_border"
                                            android:text="@string/kilat_btn"
                                            android:textColor="@color/biruLaut" />

                                    </LinearLayout>

                                    <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent">
                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:orientation="vertical">

                                            <TextView
                                                android:id="@+id/forecase_txt"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="center"
                                                android:layout_marginTop="6dp"
                                                android:layout_marginBottom="2dp"
                                                android:text="ROUGHLY YOUR ORDER WILL BE FINISHED ON"
                                                android:textColor="@color/biruLaut"
                                                android:textSize="12sp" />
                                            <TextView
                                                android:id="@+id/forecase_done_time"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="6dp"
                                                android:layout_marginBottom="6dp"
                                                android:text=" ..."
                                                android:layout_gravity="center"
                                                android:textColor="@color/biruLaut"/>
                                        </LinearLayout>
                                    </RelativeLayout>
                                </LinearLayout>
                            </RelativeLayout>
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp">
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:layout_centerHorizontal="true">
                                    <com.riyagayasen.easyaccordion.AccordionView
                                        android:layout_width="330dp"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentStart="true"
                                        android:visibility="visible"
                                        app:isAnimated="false"
                                        app:heading="Clothes "
                                        app:isExpanded="true"
                                        app:isPartitioned="true">
                                        <include
                                            android:id="@+id/head"
                                            layout="@layout/head_list_item"/>

                                    </com.riyagayasen.easyaccordion.AccordionView>
                                </LinearLayout>
                            </RelativeLayout>
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp">
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:layout_centerHorizontal="true">
                                    <com.riyagayasen.easyaccordion.AccordionView
                                        android:layout_width="330dp"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentStart="true"
                                        android:visibility="visible"
                                        app:isAnimated="false"
                                        app:heading="Body clothes"
                                        app:isExpanded="false"
                                        app:isPartitioned="true">
                                        <include layout="@layout/body_list_item"/>

                                    </com.riyagayasen.easyaccordion.AccordionView>
                                </LinearLayout>
                            </RelativeLayout>
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp">
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:layout_centerHorizontal="true">
                                    <com.riyagayasen.easyaccordion.AccordionView
                                        android:layout_width="330dp"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentStart="true"
                                        android:visibility="visible"
                                        app:isAnimated="false"
                                        app:heading="Hand clothes "
                                        app:isExpanded="false"
                                        app:isPartitioned="true">
                                        <include layout="@layout/hand_list_item"/>
                                    </com.riyagayasen.easyaccordion.AccordionView>
                                </LinearLayout>
                            </RelativeLayout>
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp">
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:layout_centerHorizontal="true">
                                    <com.riyagayasen.easyaccordion.AccordionView
                                        android:layout_width="330dp"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentStart="true"
                                        android:visibility="visible"
                                        app:isAnimated="false"
                                        app:heading="Feet clothes "
                                        app:isExpanded="false"
                                        app:isPartitioned="true">
                                        <include layout="@layout/feet_list_item"/>
                                    </com.riyagayasen.easyaccordion.AccordionView>
                                </LinearLayout>
                            </RelativeLayout>
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp">
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:layout_centerHorizontal="true">
                                    <com.riyagayasen.easyaccordion.AccordionView
                                        android:layout_width="330dp"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentStart="true"
                                        android:visibility="visible"
                                        app:isAnimated="false"
                                        app:heading="Others"
                                        app:isExpanded="false"
                                        app:isPartitioned="true">
                                        <include layout="@layout/other_list_item"/>
                                    </com.riyagayasen.easyaccordion.AccordionView>
                                </LinearLayout>
                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:layout_centerHorizontal="true">

                                    <EditText
                                        android:id="@+id/desc_txt"
                                        android:layout_width="330dp"
                                        android:layout_height="wrap_content"
                                        android:padding="6dp"
                                        android:gravity="top|left"
                                        android:maxLines ="5"
                                        android:minLines="3"
                                        android:maxLength ="2000"
                                        android:scrollHorizontally="false"
                                        android:inputType="textCapSentences|textMultiLine"
                                        android:hint="@string/desc_text"
                                        android:background="@drawable/text_border"
                                        android:textSize="14sp" />

                                </LinearLayout>
                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:layout_centerHorizontal="true">

                                    <Button
                                        android:id="@+id/confirm_btn"
                                        android:layout_width="200dp"
                                        android:padding="8dp"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/btn_order_background"
                                        android:textColor="@color/putih"
                                        android:text="@string/confirm_order_btn"/>
                                </LinearLayout>
                            </RelativeLayout>

                        </LinearLayout>
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>
            <com.google.android.material.appbar.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <androidx.appcompat.widget.Toolbar
                    android:layout_height="?attr/actionBarSize"
                    android:layout_width="match_parent"
                    app:title="@string/order_title"
                    app:titleTextColor="@color/biruLaut"
                    android:background="@color/putih"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
            </com.google.android.material.appbar.AppBarLayout>


        <!--</ScrollView>-->



    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>